# Rain-rust-bot

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  Shuttle.toml  a  config.json.example  hashmap.json  index.html  install.html
.github/workflows/: artifact.yml  docs.yml  release.yml  test.yml
assets/: app.21480e27.js  app.4177dcbf.js  app.bd126f2b.js  app.e3ba1e82.js  config_bounty.md.4337dca3.js  config_bounty.md.762eef69.lean.js  config_bounty.md.8faa7ced.lean.js  config_bounty.md.af18d45b.js  config_bounty.md.af18d45b.lean.js  config_gacha.md.012edc1b.js  config_gacha.md.521861fc.lean.js  config_gacha.md.63eced35.js  config_gacha.md.678f3ada.js  config_gacha.md.678f3ada.lean.js  config_market.md.471835d4.lean.js  config_market.md.4f39b983.js  config_market.md.fd7091d2.lean.js  config_meals.md.1bd2c847.lean.js  config_meals.md.5601f60c.js  config_meals.md.d848817b.js  config_tag.md.156a0cbe.lean.js  config_tag.md.48509075.lean.js  config_tag.md.b3d34895.js  config_tag.md.b3d34895.lean.js  config_tag.md.bef02341.lean.js  config_title.md.022b144b.lean.js  config_title.md.47ca70a8.lean.js  config_title.md.63030d8c.lean.js  config_title.md.73f1301c.js  config_title.md.73f1301c.lean.js  config_trading.md.4f516490.lean.js  config_trading.md.66c25033.lean.js  config_trading.md.8bf38d8b.js  config_trading.md.8bf38d8b.lean.js  config_trading.md.e68d0d79.js  guide_bounty.md.36f470cf.js  guide_bounty.md.3a7d816e.js  guide_bounty.md.3a7d816e.lean.js  guide_bounty.md.41c5d557.js  guide_bounty.md.fd51ad08.lean.js  (+62 more)
binding/: Cargo.toml
binding/src/: lib.rs  utils.rs
binding/src/bitwise/: distribution.rs  mod.rs
binding/src/bounty/: config.rs  mod.rs  title.rs
binding/src/postgres/: account.rs  card.rs  custom.rs  gacha.rs  guild.rs  mod.rs  server.rs
config/: bounty.html  gacha.html  market.html  meals.html  tag.html  title.html  trading.html
discord/: Cargo.toml
discord/save/: 455622761168109569.txt
discord/src/commands/: mod.rs
discord/src/commands/admin/: purge.rs  query.rs  test.rs
discord/src/commands/binded/: card.rs  mod.rs
discord/src/commands/bounty/: mod.rs
discord/src/commands/misc/: mod.rs  tag.rs
discord/src/commands/register/: change_pasword.rs
discord/src/event/: mod.rs
discord/src/material/: head.rs  leg.rs  melee.rs  mod.rs  ranged.rs  ranged_jp.rs
discord/src/reusable/: mod.rs
discord/src/reusable/component/: bounty.rs  discord.rs  shutdown.rs
discord/src/reusable/image_edit/: gacha.rs
discord/src/reusable/postgress/: server.rs
guide/: bounty.html  index.html  json.html  query.html  register.html  server.html  tag.html  trading.html
hertz/: Cargo.toml
hertz/src/: lib.rs
image-edit/: Cargo.toml
image-edit/src/: gacha.rs  lib.rs  title.rs
material/: Cargo.toml
material/src/: arms.rs  arms_jp.rs  chest.rs  head.rs  head_jp.rs  items.rs  items_jp.rs  leg.rs  leg_jp.rs  lib.rs  melee_jp.rs  ranged.rs  waist.rs  waist_jp.rs
query/: bounty.sql  bounty_add.sql  bounty_refresh.sql  bounty_rule.sql  direc.py  discord.sql  gacha.sql  init.sql  mezfes.sql  newbie.sql  query.py
rain-bot/: Cargo.toml
rain-bot-old/: Cargo.toml
rain-bot-old/src/: main.rs
rain-bot-old/src/commands/: mod.rs
rain-bot-old/src/event/: interaction.rs  join.rs  message.rs  mod.rs  paralel.rs  ready.rs
rain-bot-old/src/material/: arms_jp.rs  chest_jp.rs  items_jp.rs  leg_jp.rs  melee.rs  melee_jp.rs  ranged_jp.rs  waist.rs  waist_jp.rs
rain-bot-old/src/reusable/: config.rs  mod.rs  utils.rs
rain-bot/src/: config.rs  error.rs  main.rs  setup.rs  utils.rs
rain-bot/src/command/: mod.rs
rain-bot/src/command/admin/: mod.rs  moderate.rs
rain-bot/src/command/registered/: mod.rs  register.rs  user_info.rs
rain-bot/src/model/: components.rs  mod.rs  user.rs
rain-lab/: .gitignore  Cargo.toml  package-lock.json  package.json  tailwind.config.js
rain-lab/public/: index.css
rain-lab/src/: main.rs  websocket.rs
rain-lab/templates/: index.html
src/: main.rs
src/commands/: error.rs  id.rs  mod.rs  ping.rs
src/commands/admin/: add.rs  config.rs  interface.rs  market.rs  mod.rs  purge.rs  query.rs  save_cd.rs  test.rs
src/commands/binded/: card.rs  change.rs  mod.rs  save.rs  transfer.rs
src/commands/bounty/: cooldown.rs  mod.rs  pedia.rs  submit.rs
src/commands/gacha/: ch_gacha.rs  mod.rs  pull.rs
src/commands/guild/: guild.rs  mod.rs
src/commands/market/: ch_market.rs  market.rs  meal.rs  mod.rs  trading.rs
src/commands/misc/: ferias.rs  gpt.rs  mod.rs  tag.rs
src/commands/register/: bind.rs  button.rs  change_pasword.rs  check.rs  create.rs  interface.rs  mod.rs
src/event/: interaction.rs  join.rs  log.rs  message.rs  mod.rs  paralel.rs  ready.rs
src/material/: arms.rs  chest.rs  chest_jp.rs  head.rs  head_jp.rs  items.rs  leg.rs  melee.rs  mod.rs  ranged.rs  waist.rs
src/reusable/: config.rs  mod.rs  utils.rs
src/reusable/bitwise/: distribution.rs  mod.rs
src/reusable/component/: bounty.rs  button.rs  card.rs  discord.rs  error.rs  gacha.rs  json.rs  market.rs  mod.rs  new_error.rs  register.rs  registered.rs  unbinded.rs  widget.rs
src/reusable/gpt/: chat.rs  image.rs  mod.rs
src/reusable/image_edit/: gacha.rs  mod.rs  title.rs
src/reusable/postgress/: account.rs  basic.rs  card.rs  custom.rs  gacha.rs  guild.rs  mod.rs  server.rs
static/: bounty.json  bounty_refresh.json  bounty_title.json  cooldown.json  event_bounty.json  free_bounty.json  gacha.json  gold_bounty.json  market.json  meals.json  tag.json  trading.json
templates/: index.html
test-bot/: Cargo.toml
test-bot/src/: main.rs
vite-press/: package-lock.json  package.json
vite-press/docs/: index.md  install.md
vite-press/docs/.vitepress/: config.js
vite-press/docs/config/: bounty.md  gacha.md  tag.md  title.md  trading.md
vite-press/docs/guide/: bounty.md  index.md  json.md  query.md  register.md  server.md  tag.md  trading.md
(+59 files in other folders)
