[package]
name = "rain-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
