[package]
name = "rain-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = ["client", "gateway", "rustls_backend", "model","collector"] }
serde_json = "1.0"
chrono = "0.4.23"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres","chrono","macros"] }
reqwest = "0.11"
bcrypt = "0.13"
rand = "0.8.5"
image = "0.24.5"
imageproc = "0.23.0"
rusttype = "0.9.3"
