[package]
name = "image-edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binding = { version = "0.1.0", path = "../binding" }
image = "0.24.7"
imageproc = "0.23.0"
material = { version = "0.1.0", path = "../material" }
reqwest = { version = "0.11.22", features = ["json"] }
rusttype = "0.9.3"
tokio = { version = "1.34.0", features = ["full"] }
