[package]
name = "rain-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.0"
binding = { version = "0.1.0", path = "../binding" }
chrono = "0.4.31"
dotenv = "0.15.0"
image-edit = { version = "0.1.0", path = "../image-edit" }
material = { version = "0.1.0", path = "../material" }
poise = { git = "https://github.com/serenity-rs/poise", branch = "current", features = [ "collector"] }
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serenity = { version = "0.12.0", features = ["client", "gateway", "rustls_backend", "model", "collector", "framework"] }
tokio = { version = "1.35.0", features = ["full"] }
