[package]
name = "test-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poise = { git = "https://github.com/serenity-rs/poise", branch = "current", features = [ "collector"] }
serenity = { version = "0.12.0", features = ["client", "gateway", "rustls_backend", "model", "collector", "framework"] }
tokio = { version = "1.35.0", features = ["full"] }
